# demo-app

./: index.html
.github/workflows/: build.yaml
incident-agents/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
incident-agents/deploy/: deployment.yaml
incident-agents/src/obs_agents/: __init__.py  cache.py  config.py  health.py  main.py  messages.py  status.py
incident-agents/src/obs_agents/agents/: __init__.py  coordinator.py  logs_agent.py  metrics_agent.py  monitor.py  traces_agent.py
incident-agents/src/obs_agents/clients/: __init__.py  base.py  loki.py  prometheus.py  tempo.py
incident-agents/src/obs_agents/llm/: __init__.py  anthropic_client.py  base.py  factory.py  openai_compatible.py  tools.py
incident-agents/tests/: test_agents.py  test_cache.py  test_coordinator.py  test_lifecycle.py  test_llm_triage.py  test_messages.py  test_status.py  test_tools.py
