[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "obs-agents"
version = "0.1.0"
description = "POC: actor-model agent orchestration for Observability incident response (Pykka)"
requires-python = ">=3.10"
dependencies = [
    "pykka==4.2.0",
    "requests==2.32.3",
    "anthropic>=0.49.0",
]

[project.optional-dependencies]
cache = [
    "redis>=5.0",
]
dev = [
    "pytest==8.3.3",
    "redis>=5.0",
]

[project.scripts]
obs-agents = "obs_agents.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
